# r2e

./: .gitignore  .r2e_version  .version  README.md  pyproject.toml  pytest.ini  requirements.txt  temp.txt
src/: db copy.sqlite3  db.sqlite3-ssss  manage.py
src/apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/base/: apps.py  urls.py  views.py
src/apps/base/templatetags/: my_tags.py
src/apps/base/urls/: base.py
src/apps/base/views/: __init__.py  base.py
src/apps/center/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/apps/center/migrations/: 0001_initial.py  0002_alter_center_country.py  0002_center_abbr_alter_center_country.py  0003_alter_center_short_name.py  0004_building_bedroom.py  0005_remove_center_contact_center_contact.py  0006_alter_bedroom_gender.py  0007_remove_bedroom_beds_remove_bedroom_bunks_and_more.py  0008_remove_building_description.py
src/apps/center/urls/: bedroom.py  building.py  center.py  reports.py
src/apps/center/views/: __init__.py  bedroom.py  building.py  center.py  reports.py  (+1 more)
src/apps/event/: admin.py  forms.py  models.py  schemas.py  urls.py  views.py
src/apps/other/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/apps/person/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/register/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/r2e/: asgi.py  commom.py  settings.py  urls.py  wsgi.py
src/scripts/: import_lodges.ipynb  import_people.ipynb  utils.py
src/tests/: conftest.py  factories.py  permissions.py
src/tests/bedroom/: tests_bedroom__models.py  tests_bedroom__urls.py  tests_bedroom__urls_to_views.py  tests_bedroom__views.py
src/tests/building/: tests_building__models.py  tests_building__urls.py  tests_building__urls_to_views.py  tests_building__views.py
src/tests/center/: tests_center__models.py  tests_center__urls.py  tests_center__urls_to_views.py  tests_center__views.py
src/tests/person/: tests_person__models.py  tests_person__urls.py  tests_person__urls_to_views.py  tests_person__views.py
src/tests/user/: tests_user__models.py
(+291 files in other folders)
