[project]
name = "r2e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-bootstrap5>=24.3",
    "django-htmx>=1.19.0",
    "django-widget-tweaks>=1.5.0",
    "django==4.2.*",
    "dynaconf>=3.2.6",
    "gunicorn>=23.0.0",
    "phonenumbers>=8.13.46",
    "pillow>=10.4.0",
    "psycopg2-binary>=2.9.9",
]

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "faker>=30.1.0",
    "openpyxl>=3.1.5",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "taskipy>=1.13.0",
    "ruff>=0.6.8",
]

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'src/manage.py runserver'
mng = 'src/manage.py'
pre_test = 'task lint'
test = 'pytest src/tests/'
